--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,7 +20,7 @@
     "googleapis": "^102.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.5",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.20",
     "pg": "^8.7.3"
   }
 }
